<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:contentPadding="3dp"
    app:cardElevation="3dp"
    app:cardBackgroundColor="@color/whiteColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/itemTitle"
                android:textColor="@color/blackColor"
                android:text="@string/item_view"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/descTitle"
                android:textColor="@color/blackColor"
                android:text="@string/desc_view"
                android:layout_marginRight="80dp"
                android:textSize="12sp"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/qtyTitle"
                android:textColor="@color/blackColor"
                android:text="@string/qty_view"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editBtn"
            android:src="@drawable/ic_action_edit_foreground"
            android:background="@null"
            android:layout_marginEnd="16dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>